--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="nav">
@@ -27,9 +27,9 @@
         </div>
         <div class="slide-container">
             <div class="image-container">
-              <img src="/foto/foto1.jpg" alt="Image 1">
-              <img src="/foto/foto2.jpg" alt="Image 2">
-              <img src="/foto/foto3.jpg" alt="Image 3">
+              <img src="foto/foto1.jpg" alt="Image 1">
+              <img src="foto/foto2.jpg" alt="Image 2">
+              <img src="foto/foto3.jpg" alt="Image 3">
             </div>
           </div>
     </div>
